# boe-dog-summary

./: .env.example  .gitignore  README.md  bot.py  llm.py  main.py  pyproject.toml  recipients.json
src/tg_summary/: __init__.py  bot.py  config.py  feed.py  html_fix.py  interactive_bot.py  llm.py  main.py  markdown_fix.py  recipients.py  state.py
